...
            barButtonSystemItem: .save,
            target: self,
            action: #selector(saveButtonTapped(_:)))
        toolbarItems = [cancelButton, spacer, saveButton, spacer]
        if let editing = editingClient?.amEditing, !editing {
            nextButton = UIBarButtonItem(
                title: "Next >",
                style: .plain,
                target: self,
                action: #selector(nextButtonTapped(_:)))
            toolbarItems?.append(nextButton!)
            nextButton?.isEnabled = true
        }
...
